# Sistemas-de-Tempo-Real

./: README.md
Pratica_01/: CMakeLists.txt  pratica1.c
Pratica_02/: CMakeLists.txt
Pratica_02/inc/: FreeRTOSConfig.h
Pratica_02/src/: main.c
Pratica_03/: CMakeLists.txt
Pratica_03/inc/: FreeRTOSConfig.h
Pratica_03/src/: main.c
Pratica_04/: CMakeLists.txt
Pratica_04/inc/: FreeRTOSConfig.h
Pratica_04/src/: main.c
Pratica_05/: CMakeLists.txt
Pratica_05/src/: main.c
Pratica_06/: CMakeLists.txt
Pratica_06/src/: main.c
Pratica_07/: CMakeLists.txt
Pratica_07/src/: main.c
Projeto_Final/: CMakeLists.txt
Projeto_Final/inc/: FreeRTOSConfig.h
Projeto_Final/src/: main.c
